--- a/style.css
+++ b/style.css
@@ -42,10 +42,38 @@ span {
   border-radius: 20px;
 }
 
+.img-container {
+  position: relative;
+  width: 100%;
+}
+
 .main-img {
+  display: block;
   width: 100%;
   border-radius: 10px;
-  cursor: pointer;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  background-color: var(--cyan-color);
+}
+
+.img-container:hover .overlay {
+  opacity: 0.7;
+  border-radius: 10px;
+}
+
+.overlay-img {
+  position: absolute;
+  width: 100%;
+  padding: 42%;
 }
 
 .heading {
