--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 
 span {
   color: var(--soft-blue-color);
-  font-size: 0.9rem;
+  font-size: 1rem;
   font-weight: 300;
 }
 
@@ -77,7 +77,7 @@ span {
 }
 
 .heading {
-  padding: 5% 0;
+  padding-top: 5%;
   font-size: 1.5rem;
   font-weight: 600;
   color: var(--white-color);
@@ -89,8 +89,8 @@ span {
 }
 
 .text {
+  padding-top: 5%;
   font-weight: 300;
-  padding: 5% 0;
   color: var(--soft-blue-color);
 }
 
@@ -128,8 +128,8 @@ span {
 .avatar-container {
   display: flex;
   align-items: center;
-  height: 40px;
-  margin: 5% 0;
+  height: 30px;
+  margin: 5% 0 0;
 }
 
 .avatar-icon {
